force-app/main/default/objects/Product_Names__c/Product_Names__c.object-meta.xml
<CustomObject>
    <label>Product Names</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>