force-app/main/default/objects/Product_Names__c/fields/Pay_on_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Pay_on_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay on Delivery</label>
    <type>Checkbox</type>
</CustomField>